[package]
name = "sievert"
version = "0.3.0"
edition = "2021"
description = "SIEVE email filter manager"

[dependencies]
iced = { version = "0.13", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
rustls = "0.23"
webpki-roots = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "6"
rfd = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
base64 = "0.22"
thiserror = "2"

[dev-dependencies]
# tests use the library directly

[profile.release]
strip = true
lto = true
opt-level = "s"
